--- a/templates/darkknight/index.html
+++ b/templates/darkknight/index.html
@@ -31,7 +31,7 @@
         h3 {
             font-size: 15px;
             font-weight: bold;
-            text-decoration: underline;
+            text-decoration: none;
             margin: 8px 0px 6px 0px;
         }
 
